crates/ferrum-interfaces/tests/ui/vnext/fail/execution_plan_is_immutable.rs
use ferrum_interfaces::vnext::ExecutionPlan;

fn mutate(plan: &ExecutionPlan) {
    plan.payload().schema = ferrum_interfaces::vnext::PlanSchemaVersion::new(2, 0);
}

fn main() {}
